K8s/backstage/dex/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: backstage
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/part-of: idp
    owner: platform-team
    business-unit: infrastructure
    environment: demo
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    description: 'Service for Dex OIDC provider'
    contact: platform-team
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5556
      targetPort: http
      protocol: TCP
    - name: telemetry
      port: 5558
      targetPort: telemetry
      protocol: TCP
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
